[package]
name = "gamething"
version = "0.1.0"
edition = "2021"

# import external file named add.rs

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
# Engine
bevy = "0.7.0"

# Serialization
serde = "1.0"

# Random
rand = "0.8"

# Console Debug
colored = { version = "2.0", optional = true }
# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.11.0", optional = true }

[profile.dev.package."*"]
opt-level = 3